--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.6.1",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@react-pdf/renderer": "^3.1.9",
     "aos": "^3.0.0-beta.6",
     "daisyui": "^2.51.6",
     "firebase": "^9.21.0",
+    "framer-motion": "^10.12.8",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
